# Poke-Radar

./: .env.example  .gitignore  AGENTS.md  Caddyfile  README.md  architecture_technique.md  market-Poke-Radar-research.md  poke-radar.service  rapport_brainstorming.md  technical-Poke-Radar-research.md
_bmad/: config.toml
_bmad-output/: code-review-2026-04-13.md  config.yaml
_bmad-output/brainstorming/: brainstorming-session-2025-02-05.md
_bmad-output/implementation-artifacts/: 1-1-initialiser-lapplication-desktop-et-la-persistance-locale.md  1-1-initialiser-lapplication-et-la-persistance-locale.md  deferred-work.md  (+7 more)
backend/: Cargo.toml
backend/src/: main.rs
backend/src/app/: router.rs  state.rs
backend/src/infrastructure/db/: mod.rs
backend/src/infrastructure/db/migrations/: 001_initial.sql
docs/: DESIGN.md  EXPERIENCE.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  tauri_app.rs
src-tauri/src/app/: bootstrap.rs  commands.rs  mod.rs
src-tauri/src/domain/models/: mod.rs
src-tauri/src/domain/services/: mod.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/db/: mod.rs
src-tauri/src/infrastructure/db/migrations/: 001_initial_schema.sql  002_monitor_profiles.sql  003_product_references.sql  004_correct_product_reference_seed.sql
src-tauri/src/infrastructure/db/repositories/: mod.rs
src-tauri/tests/: first_launch.rs  profile_persistence.rs
ui/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
ui-dist/: index.html
(+88 files in other folders)
